                              Release History
===========================================================================

6.3 to 6.4 (XXXX XX, 2020)

  * Added basic (entire and single line only) text cut/copy and paste.

  * Fixed bug with aspect correction and fullscreen mode; snapshots from
    such a mode are now pixel-exact.

-Have fun!


6.2.1 to 6.3 (October 7, 2020)

  * Added adjustable autofire.

  * Added 'Dark' UI theme.

  * Extended global hotkeys for debug options.

  * Added option to playback a game using the Time Machine.

  * Allow taking snapshots from within the Time Machine dialog.

  * Added the ability to access most files that Stella uses from within a
    ZIP file. This includes the following:
      - Per-ROM properties file (so one can distribute a ROM and its
        associated properties).
      - Debugger symbol (.sym) and list (.lst) files, etc.
      - Several others, as we extend the support.
    Basically, you are now able to put many files that Stella uses inside
    one ZIP file, and distribute just that file.

  * Extended AtariVox support to handle flow control, so that long phrases
    are no longer corrupted/cut off.  This includes properly supporting the
    2600-daptor II, which is flashable to an AVox-USB converter.

  * Added auto-detection of the serial port used for an AtariVox-USB adaptor.

  * Added QuadTari controller support.

  * Added option to select the audio device.

  * Added support for CDFJ+ bankswitching type.

  * Further enhanced UA bankswitching to support more Brazilian carts.

  * Added option to display detected settings info when a ROM is loaded.

  * Added another oddball TIA glitch option for delayed background color.

  * Added option to disable aspect ratio correct scaling.

  * Added debugger pseudo-registers '_timwrapread' and '_timwrapwrite',
    which are set when the RIOT timer is read/written on timer wraparound,
    respectively.
